--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -191,7 +191,7 @@
                             <div class="row">
                                 <div class="file-field input-field">
                                     <div class="btn" id="btnCv">
-                                        <span>Currículo</span>
+                                        <span>Arquivo</span>
                                         <input type="file" name="file" data-error=".errorTxt4" accept="image/x-eps,application/pdf">
                                     </div>
                                     <div class="file-path-wrapper">
