--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -28,10 +28,10 @@
 }
 
 .logout {
-    background-color: #f0f0f5;
-    box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
-    margin: 50px;
-    height: 540px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     border-radius: 10px;
 }
 
