--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -10,7 +10,7 @@
  
     <!-- Alunos -->
     <div style="height: 100%;">
-    <div class="container">
+    <div class="container" id="alunosContainer">
         <div class="col s12 m12 quadrado" style="margin-bottom: 0;">
             <div id="alunos"><h2>Alunos</h2></div>                                    
         </div>
