--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -10,7 +10,7 @@
         <span id="pagos" style="display: none;"><%=pagos%></span>
         <span id="pendentes" style="display: none;"><%=pendentes%></span>
 
-        <div class="container">
+        <div class="container" id="finance">
         <div class="col s12 m12 quadrado" style="margin-bottom: 0;">
             <div id="alunos"><h2><%=mes%>/<%=ano%></h2></div>                                    
         </div>
