--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %> 
 
-    <div class="row">
+    <div class="row" id="login">
 
         <div class="col s12 m11 l5" id="login">
             <% if(menssage != '') { %>
