--- a/public/css/login.css
+++ b/public/css/login.css
@@ -34,6 +34,13 @@ body {
     background-size: cover;
 }
 
+#login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 form span {
     width: 90%;
     margin-left: 43px;
