--- a/public/css/sobre.css
+++ b/public/css/sobre.css
@@ -30,6 +30,9 @@
 #sobre {
     height: 100vh;
     max-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #sobre p {
