Removendo id repetido

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 
     <div class="row" id="login">
 
-        <div class="col s12 m11 l5" id="login">
+        <div class="col s12 m11 l5">
             <% if(menssage != '') { %>
                 
                        <div class="card-panel " style="color: red;font-size: 18px;text-align: center;border: 1px solid red;border-radius: 15px;font-weight: bold;padding: 10px;background: transparent;"><%- menssage%></div>
